<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="open_ativity_registrazione"
    tools:context=".Login">

    <EditText
        android:id="@+id/etxt_username"
        android:layout_width="172dp"
        android:layout_height="50dp"
        android:autofillHints="username"
        android:inputType="textEmailAddress"
        android:text="@string/utente"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.539" />

    <EditText
        android:id="@+id/etxt_password"
        android:layout_width="172dp"
        android:layout_height="50dp"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:text="@string/password"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603" />

    <Button
        android:id="@+id/button"
        android:layout_width="164dp"
        android:layout_height="58dp"
        android:onClick="doLogin"
        android:text="@string/accedi"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.864" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="263dp"
        android:layout_height="119dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/etxt_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoscritta" />

    <TextView
        android:id="@+id/editTextTextPersonName"
        android:layout_width="203dp"
        android:layout_height="65dp"
        android:ems="10"
        android:onClick="open_activity_registrazione"
        android:text="@string/non_hai_un_account"
        android:textAlignment="center"
        android:textColor="#1976D2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />
</androidx.constraintlayout.widget.ConstraintLayout>