<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registrazione">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoscritta"
        android:translationZ="10dp"/>


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="425dp"
        android:layout_height="448dp"
        android:fillViewport="true"
        android:translationZ="1dp"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_editor_absoluteX="-9dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etxt_cognome"
                android:layout_width="250dp"
                android:layout_height="59dp"
                android:layout_gravity="center"
                android:autofillHints=""
                android:hint="cognome"
                android:inputType="textEmailAddress"
                android:orientation="horizontal"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="@id/imageView2"
                app:layout_constraintHorizontal_bias="0.481"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.539" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:ems="10"
                android:onClick="open_activity_login"
                android:text="                 "
                android:textAlignment="center"
                android:textColor="#1976D2"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <EditText
                android:id="@+id/etxt_nome"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:autofillHints=""
                android:hint="nome"
                android:inputType="textEmailAddress"
                android:orientation="horizontal"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.375" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:ems="10"
                android:onClick="open_activity_login"
                android:text="                 "
                android:textAlignment="center"
                android:textColor="#1976D2"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/etxt_username"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:autofillHints=""
                android:hint="utente"
                android:inputType="text"
                android:orientation="horizontal"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.375"
                tools:text="utente" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:ems="10"
                android:onClick="open_activity_login"
                android:text="                 "
                android:textAlignment="center"
                android:textColor="#1976D2"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/etxt_email"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:autofillHints=""
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:orientation="horizontal"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etxt_username"
                app:layout_constraintVertical_bias="0.061"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:ems="10"
                android:onClick="open_activity_login"
                android:text="                 "
                android:textAlignment="center"
                android:textColor="#1976D2"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/etxt_conferma_email"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:autofillHints=""
                android:hint="@string/conferma_email"
                android:inputType="textEmailAddress"
                android:orientation="horizontal"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etxt_username"
                app:layout_constraintVertical_bias="0.319" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:ems="10"
                android:onClick="open_activity_login"
                android:text="                 "
                android:textAlignment="center"
                android:textColor="#1976D2"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/etxt_password"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:autofillHints=""
                android:hint="password"
                android:inputType="textPassword"
                android:orientation="horizontal"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etxt_email"
                app:layout_constraintVertical_bias="0.236"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:ems="10"
                android:onClick="open_activity_login"
                android:text="                 "
                android:textAlignment="center"
                android:textColor="#1976D2"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <EditText
                android:id="@+id/etxt_conferma_password"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:autofillHints=""
                android:hint="conferma password"
                android:inputType="textPassword"
                android:orientation="horizontal"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etxt_password"
                app:layout_constraintVertical_bias="0.13" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:ems="10"
                android:onClick="open_activity_login"
                android:text="                 "
                android:textAlignment="center"
                android:textColor="#1976D2"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>
    </ScrollView>

        <Button
        android:id="@+id/button"
        android:layout_width="164dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:backgroundTint="#006633"
        android:onClick="doRegistrazione"
        android:text="@string/Registrati"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.864"
        tools:text="Registrati" />

    <TextView
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:ems="10"
        android:onClick="open_activity_login"
        android:text="Hai già un account? \n Accedi"
        android:textAlignment="center"
        android:textColor="#1976D2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>